finalização do HTML

--- a/index.html
+++ b/index.html
@@ -105,6 +105,145 @@
     </section>
     <!--/service section-->
 
+    <!--portfolio section-->
+
+    <section class="portfolio" id="portfolio">
+        <h2>Latest<span>Projects</span></h2>
+
+        <div class="portfolio-container">
+            <div class="portfolio-box"><!--inicio card 1-->
+                <img src="img/01.jpg" alt="Portfolio 1">
+
+                <div class="portfolio-layer"><!--Layer é a camada da escrita-->
+                    <h4>Web Development</h4>
+
+                    <p>Temporibus aspernatur dolorem enim. Id consequuntur in unde dicta vitae, maxime a repellendus suscipit. Consectetur totam similique doloremque temporibus quibusdam animi aspernatur dolore mollitia natus consequatur nam sapiente.
+
+                    </p>
+
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div><!--final card 1-->
+
+            <div class="portfolio-box"><!--inicio card 2-->
+                <img src="img/02.jpg" alt="Portfolio 2">
+
+                <div class="portfolio-layer"><!--Layer é a camada da escrita-->
+                    <h4>Web Development</h4>
+
+                    <p>Temporibus aspernatur dolorem enim. Id consequuntur in unde dicta vitae, maxime a repellendus suscipit. Consectetur totam similique doloremque temporibus quibusdam animi aspernatur dolore mollitia natus consequatur nam sapiente.
+
+                    </p>
+
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div><!--final card 2-->
+
+            <div class="portfolio-box"><!--inicio card 3-->
+                <img src="img/03.jpg" alt="Portfolio 3">
+
+                <div class="portfolio-layer"><!--Layer é a camada da escrita-->
+                    <h4>Web Development</h4>
+
+                    <p>Temporibus aspernatur dolorem enim. Id consequuntur in unde dicta vitae, maxime a repellendus suscipit. Consectetur totam similique doloremque temporibus quibusdam animi aspernatur dolore mollitia natus consequatur nam sapiente.
+
+                    </p>
+
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div><!--final card 3-->
+
+            <div class="portfolio-box"><!--inicio card 4-->
+                <img src="img/04.jpg" alt="Portfolio 4">
+
+                <div class="portfolio-layer"><!--Layer é a camada da escrita-->
+                    <h4>Web Development</h4>
+
+                    <p>Temporibus aspernatur dolorem enim. Id consequuntur in unde dicta vitae, maxime a repellendus suscipit. Consectetur totam similique doloremque temporibus quibusdam animi aspernatur dolore mollitia natus consequatur nam sapiente.
+
+                    </p>
+
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div><!--final card 4-->
+
+            <div class="portfolio-box"><!--inicio card 5-->
+                <img src="img/05.jpg" alt="Portfolio 5">
+
+                <div class="portfolio-layer"><!--Layer é a camada da escrita-->
+                    <h4>Web Development</h4>
+
+                    <p>Temporibus aspernatur dolorem enim. Id consequuntur in unde dicta vitae, maxime a repellendus suscipit. Consectetur totam similique doloremque temporibus quibusdam animi aspernatur dolore mollitia natus consequatur nam sapiente.
+
+                    </p>
+
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div><!--final card 5-->
+
+            <div class="portfolio-box"><!--inicio card 6-->
+                <img src="img/06.jpg" alt="Portfolio 6">
+
+                <div class="portfolio-layer"><!--Layer é a camada da escrita-->
+                    <h4>Web Development</h4>
+
+                    <p>Temporibus aspernatur dolorem enim. Id consequuntur in unde dicta vitae, maxime a repellendus suscipit. Consectetur totam similique doloremque temporibus quibusdam animi aspernatur dolore mollitia natus consequatur nam sapiente.
+
+                    </p>
+
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div><!--final card 6-->
+        </div>
+    </section>
+
+    <!--/portfolio section-->
+
+    <!--contact section-->
+    <section class="contact" id="contact">
+        <h2>Contact <span>Me!</span></h2>
+
+        <form action="" method="">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name"><!--placeholder texto fica no fundo do form-->
+                <input type="email" placeholder="E-mail">
+            </div>
+
+            <div class="input-box">
+                <input type="number" placeholder="Phone Number">
+                <input type="text" placeholder="Subject">
+            </div>
+
+            <textarea cols="30" rows="8" placeholder="Message"></textarea>
+
+            <a href="#" class="btn">Send Message</a>
+        </form>
+    </section>
+    <!--/contact section-->
+
+    <!--about section-->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/profile.png" alt="About Me">
+        </div>
+
+        <div class="about-content">
+            <h3>About Me</h3>
+            <h1>Full-Stack <span>Developer</span></h1>
+
+            <p>
+                olor atque numquam nemo in iusto esse, itaque magni quod commodi nobis cum eligendi, illum dolores ea vitae animi minima optio labore provident hic? Rerum, dignissimos quasi. Ipsum obcaecati dolore dignissimos dolor, nobis tenetur exercitationem praesentium laudantium sint repellendus voluptate quia consequuntur vel nisi consequatur quo maxime facilis aspernatur ad.
+            </p>
+
+            <a href="#" class="btn">Read More</a>
+        </div>
+    </section>
+
+    <!--/about section-->
+
+    <footer>
+        <p>Copyright &copy; 2024 by &lt;/Endy Micaelle&gt;. All rights Reserved.</p>
+    </footer>
 </body>
 <script src="script.js"></script> <!--conecta css no html-->
 
