--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
         <div class="nav">
             <a href="#home">Home</a>
-            <a href="#service">Service</a>
+            <a href="#service">Services</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#contato">Contato</a>
+            <a href="#contact">Contato</a>
             <a href="#about">About</a>
         </div>
     </header>
@@ -108,7 +108,7 @@
     <!--portfolio section-->
 
     <section class="portfolio" id="portfolio">
-        <h2>Latest<span>Projects</span></h2>
+        <h2>Latest <span>Projects</span></h2>
 
         <div class="portfolio-container">
             <div class="portfolio-box"><!--inicio card 1-->
