--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
             <a href="#contact">Contato</a>
             <a href="#about">About</a>
         </div>
+
+        <div class="nav-responsive">
+            <a href="#home">Home</a>
+            <a href="#service">Services</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contato</a>
+            <a href="#about">About</a>
+        </div>
+
+        <div class="menu-hamburguer">
+            <div class="bar1"></div>
+            <div class="bar1"></div>
+            <div class="bar1"></div>
+
+        </div>
     </header>
 
     <!--home section-->
